--- a/prepare_music.ipynb
+++ b/prepare_music.ipynb
@@ -21,7 +21,7 @@
     "import matplotlib.pyplot as plt\n",
     "import math\n",
     "import pdb\n",
-    "import json\n",
+    "import json\n"
    ]
   },
   {
