--- a/shazam.ipynb
+++ b/shazam.ipynb
@@ -22,7 +22,7 @@
     "import math\n",
     "import pdb\n",
     "import json\n",
-    "import librosa as lr\n",
+    "import librosa as lr\n"
    ]
   },
   {
